--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -8,4 +8,5 @@
     android:ellipsize="marquee"
     android:singleLine="true"
     android:hint="Local"
+    android:textColor="@color/primary"
     android:textAlignment="inherit" />
