--- a/app/src/main/res/layout/fragment_satellite_detail.xml
+++ b/app/src/main/res/layout/fragment_satellite_detail.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="0dp"
+    android:paddingTop="0dp"
     android:orientation="vertical">
 
     <RelativeLayout
