--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -6,11 +6,11 @@
 
         <variable
             name="timestorage"
-            type="org.publicntp.gnssreader.repository.time.TimeStorageConsumer" />
+            type="org.publicntp.timeserver.repository.time.TimeStorageConsumer" />
 
         <variable
             name="locationstorage"
-            type="org.publicntp.gnssreader.repository.location.LocationStorageConsumer" />
+            type="org.publicntp.timeserver.repository.location.LocationStorageConsumer" />
     </data>
 
     <LinearLayout
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="15dp"
-        tools:context="org.publicntp.gnssreader.ui.time.TimeFragment">
+        tools:context="org.publicntp.timeserver.ui.time.TimeFragment">
 
         <Space
             android:layout_width="match_parent"
