--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:keepScreenOn="true">
 
     <data>
 
@@ -131,7 +132,6 @@
 
                 </LinearLayout>
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -142,22 +142,19 @@
                 android:layout_weight="2.8"
                 android:orientation="horizontal">
 
-                <ToggleButton
-                    android:id="@+id/server_btn_toggle"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:background="@drawable/custom_togglebutton"
-                    android:fontFamily="@font/roboto_medium"
-                    android:paddingBottom="6dp"
-                    android:textColor="@color/white"
-                    android:textOff="@string/server_off"
-                    android:textOn="@string/server_on"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    tools:text="Server On" />
-
+                <Switch
+                  android:id="@+id/server_switch"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:switchMinWidth="56dp"
+                  android:text="Toggle Server"
+                  android:checked="false"
+                  android:textOff="@string/server_off"
+                  android:textOn="@string/server_on"
+                  android:textColor="@color/primary"
+                  android:textSize="20sp" />
             </LinearLayout>
+
         </LinearLayout>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
