--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
-
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:colorButtonNormal">@color/primary_dark</item>
 
     </style>
@@ -19,12 +19,14 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:minHeight">64dip</item>
         <item name="android:minWidth">64dip</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
     <style name="AppTheme.Button.Large" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/white</item>
         <item name="android:minHeight">64dip</item>
         <item name="android:minWidth">64dip</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -33,6 +35,6 @@
 
     <style name="AppTheme.ToggleButton" parent="Base.Widget.AppCompat.Button">
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
-
 </resources>
