--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
+            android:layout_marginBottom="0dp"
             android:orientation="vertical"
             tools:context="org.publicntp.timeserver.ui.server.ServerFragment">
 
@@ -29,9 +30,8 @@
             <LinearLayout
                 android:id="@+id/server_layout_net_activity"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:layout_weight="3"
                 android:orientation="horizontal">
 
                 <TextView
@@ -62,9 +62,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="5"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -131,80 +130,106 @@
                         android:textSize="20sp" />
 
                 </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="14dp"
-                android:layout_weight="2.8"
-                android:orientation="horizontal">
+                <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="30dp"
+                  android:layout_marginEnd="16dp"
+                  android:layout_marginStart="16dp"
+                  android:layout_marginTop="35dp"
+                  android:orientation="horizontal">
 
-                <Switch
-                  android:id="@+id/server_switch"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:switchMinWidth="56dp"
-                  android:checked="false"
-
-                 />
-                <TextView
+                  <Switch
+                    android:id="@+id/server_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:switchMinWidth="56dp"
+                    android:checked="false"
+                    android:textSize="25sp"
+                    />
+                  <TextView
                     android:id="@+id/server_switch_text"
                     android:layout_width="200sp"
                     android:layout_height="wrap_content"
                     android:text="SNTP Server"
                     android:textColor="@color/primary_dark"
-                    android:textSize="20sp"
-                />
-            </LinearLayout>
-            <View
-              android:layout_width="match_parent"
-              android:layout_height="1dp"
-              android:background="@color/primary"
-              android:layout_marginEnd="16dp"
-              android:layout_marginStart="16dp"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+
+                    />
+                  </LinearLayout>
+                </LinearLayout>
+
+
+          <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/primary"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             />
             <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="39dp"
+              android:layout_marginEnd="16dp"
+              android:layout_marginStart="16dp"
+              android:orientation="horizontal">
+
+              <TextView
+                android:id="@+id/server_port_interface"
+                android:layout_width="wrap_content"
+                android:layout_height="40sp"
+                android:text="Interface:"
+                android:textColor="@color/primary_dark"
+                android:textStyle="bold"
+                android:textSize="20sp"
+              />
+              <Spinner
+                android:id="@+id/ports_available"
+                android:layout_marginEnd="5dp"
+                android:layout_width="120sp"
+                android:layout_height="40sp"
+                android:textColor="@color/primary_dark"
+                android:textStyle="bold"
+                android:textSize="20sp"
+              />
+              <View
+                android:layout_width="1dp"
+                android:layout_height="40sp"
+                android:background="@color/primary"
+                android:layout_marginEnd="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="20sp"
+              />
+              <TextView
+                android:id="@+id/server_port_text"
+                android:layout_width="wrap_content"
+                android:layout_height="40sp"
+                android:text="Port: "
+                android:textColor="@color/primary_dark"
+                android:textStyle="bold"
+                android:textSize="20sp"
+              />
+              <TextView
+                android:id="@+id/server_port"
+                android:layout_width="wrap_content"
+                android:layout_height="40sp"
+                android:text=""
+                android:textColor="@color/primary_dark"
+                android:textStyle="bold"
+              />
+              </LinearLayout>
+              <View
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="1dp"
+                android:background="@color/primary"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_weight="2.8"
-                android:orientation="horizontal">
-
-                <TextView
-                  android:id="@+id/server_port_interface"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Interface:"
-                  android:textColor="@color/primary_dark"
-                />
-                <Spinner
-                  android:id="@+id/ports_available"
-                  android:layout_marginEnd="5dp"
-                  android:layout_width="220sp"
-                  android:layout_height="wrap_content"
-                  android:textColor="@color/primary_dark"
-                />
-                <View
-                  android:layout_width="1dp"
-                  android:layout_height="30dp"
-                  android:background="@color/primary"
-                  android:layout_marginEnd="5dp"
-                  android:layout_marginStart="5dp"
-                  android:layout_marginTop="5dp"
-                  android:layout_marginBottom="5dp"
-                />
-                <TextView
-                    android:id="@+id/server_port"
-                    android:layout_width="50sp"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/primary_dark"
-                />
-            </LinearLayout>
-        </LinearLayout>
+                android:layout_marginTop="5dp"
+              />
+          </LinearLayout>
     </android.support.design.widget.CoordinatorLayout>
 </layout>
