--- a/app/src/main/res/layout/fragment_satellite_detail.xml
+++ b/app/src/main/res/layout/fragment_satellite_detail.xml
@@ -94,6 +94,25 @@
             android:textColor="@color/satellite_detail_text"
             android:textSize="@dimen/satellite_detail_text_size" />
     </LinearLayout>
-  
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/satellite_frequency_heading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/satellite_detail_label_margin"
+            android:textColor="@color/black"
+            android:textSize="@dimen/satellite_detail_text_size" />
+
+        <TextView
+            android:id="@+id/satellite_frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/satellite_detail_text"
+            android:textSize="@dimen/satellite_detail_text_size" />
+    </LinearLayout>
 
 </LinearLayout>
