--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -17,7 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:layout_marginTop="8dp"
         tools:context="app.timeserver.ui.time.TimeFragment">
 
         <Space
@@ -129,6 +131,7 @@
                 android:text="@string/time_accuracy_units"
                 android:textColor="@color/primary"
                 android:textSize="@dimen/unit_text_size" />
+
         </LinearLayout>
 
         <Space
