--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -43,7 +43,7 @@
     </string-array>
 
     <string-array name="packet_choices">
-        <item>20000</item>
+        <item>Unlimited</item>
         <item>9000</item>
         <item>4800</item>
         <item>2400</item>
