Added decimal time and swatch internet time to time options. Fixed settings not saving. Added auto-start to server option. Changed fron local clock to GPS clock.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,11 +5,11 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/splash_logo"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
         android:contentDescription="@string/time_image_logo_desc"
-        android:src="@drawable/infinite_logo_spin" />
+        android:src="@drawable/pntp_logo" />
 </RelativeLayout>
