fixed portuguese in german translation file

--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -23,7 +23,7 @@
         <item>Tiempo</item>
         <item>Satélites</item>
         <item>Servidor</item>
-        <item>Informação</item>
+        <item>Info</item>
     </string-array>
 
     <string-array name="stratum_choices">
